# Better-CMake

2. Functions And Macros/: CMakeLists.txt  main.cpp
